# kazoe-bot

./: .gitignore  Cargo.toml  README.md  pnpm-lock.yaml  praise.json  umakazoe.db
src/: handler.rs  lib.rs  main.rs  record.rs
