[package]
name = "kazoe-bot"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
tokio = { version = "1", features = ["rt"] }
dotenv = "0.15"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.serenity]
default-features = false
# features = ["builder", "cache", "chrono", "client", "gateway", "model", "utils", "rustls_backend"]
features = ["builder"]
version = "0.12"

[profile.release]
lto = true
strip = true
codegen-units = 1