[package]
name = "kazoe-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "chrono", "client", "gateway", "model", "utils", "rustls_backend"]
version = "0.12"

[profile.release]
lto = true
strip = true
codegen-units = 1